src/objects/Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Allocation_Name__c</fullName>
        <label>Allocation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funraise Campaign Goal</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Funraise Subscriptions</relationshipLabel>
        <relationshipName>Funraise_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Page_Name__c</fullName>
        <label>Campaign Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Match_Company_Name__c</fullName>
        <label>Company Match Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Match_Employee_Email__c</fullName>
        <label>Company Match Employee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Company_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedication_Email__c</fullName>
        <label>Dedication Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dedication_Message__c</fullName>
        <label>Dedication Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedication_Name__c</fullName>
        <label>Dedication Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedication_Type__c</fullName>
        <label>Dedication Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dedication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <label>Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Date__c</fullName>
        <label>Next Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Tip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Operations Tip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Expiration_Date__c</fullName>
        <label>Payment Method Expiration Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Last_Four__c</fullName>
        <label>Payment Method Last Four</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Type__c</fullName>
        <label>Payment Method Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supporter__c</fullName>
        <label>Supporter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Funraise Subscriptions</relationshipLabel>
        <relationshipName>Funraise_Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fr_ID__c</fullName>
        <externalId>true</externalId>
        <label>Funraise ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Funraise Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Funraise Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funraise Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>